More ui elements

--- a/src/resources/translations/dynamic/static_ui_ru.json
+++ b/src/resources/translations/dynamic/static_ui_ru.json
@@ -44,5 +44,23 @@
   "Auto Drop settings": "Настройки автосброса",
   "Eating bot": "Бот питания",
   "Farming Settings": "Настройки фермерства",
-  "Cheese orders": "Заказы сыра"
+  "Cheese orders": "Заказы сыра",
+  "Show/Hide Tree Icons": "Показать/Скрыть иконки деревьев",
+  "Show/Hide Fish Icons": "Показать/Скрыть иконки рыбы",
+  "Tree Search": "Поиск деревьев",
+  "Fish Search": "Поиск рыбы",
+  "Drag and drop an item here": "Перетащите предмет сюда",
+  "or select it from the categories": "или выберите его из категорий",
+  "Add to 'Take'": "Добавить к 'Взять'",
+  "Add to 'Put'": "Добавить к 'Положить'",
+  "Kin": "Родня",
+  "Kith & Kin": "Родня",
+  "Tree Type:": "Тип дерева:",
+  "Search": "Поиск",
+  "Results:": "Результаты:",
+  "Rotate": "Повернуть",
+  "Confirm": "Подтвердить",
+  "Select tree spacing:": "Выберите расстояние между деревьями:",
+  "Trees to plant:": "Деревьев для посадки:",
+  "Take": "Взять"
 }
