--- a/src/resources/translations/dynamic/static_ui_ru.json
+++ b/src/resources/translations/dynamic/static_ui_ru.json
@@ -62,5 +62,153 @@
   "Confirm": "Подтвердить",
   "Select tree spacing:": "Выберите расстояние между деревьями:",
   "Trees to plant:": "Деревьев для посадки:",
-  "Take": "Взять"
+  "Take": "Взять",
+
+  "_main_menu": "Main menu tooltips",
+  "Inventory": "Инвентарь",
+  "Equipment": "Экипировка",
+  "Character Sheet": "Лист персонажа",
+  "Options": "Настройки",
+  "Areas Settings": "Настройки областей",
+  "Routes Settings": "Настройки маршрутов",
+  "Cook Book": "Поваренная книга",
+  "Encyclopedia": "Энциклопедия",
+  "Search actions...": "Поиск действий...",
+
+  "_video_settings": "Video settings",
+  "Render shadows": "Рендер теней",
+  "Render scale": "Масштаб рендеринга",
+  "Vertical sync": "Вертикальная синхронизация",
+  "Framerate limit (active window)": "Ограничение FPS (активное окно)",
+  "Framerate limit (background window)": "Ограничение FPS (фоновое окно)",
+  "Lighting mode": "Режим освещения",
+  "Light-source limit": "Лимит источников света",
+  "Frame sync mode": "Режим синхронизации кадров",
+  "Antialiasing": "Сглаживание",
+  "Anisotropic filtering": "Анизотропная фильтрация",
+  "Reset to defaults": "Сбросить к умолчанию",
+  "None": "Нет",
+  "Global": "Глобальный",
+  "Zoned": "Зональный",
+  "Tick overlap": "Перекрытие тиков",
+  "Off": "Выключено",
+
+  "_audio_settings": "Audio settings",
+  "Master audio volume": "Главная громкость звука",
+  "Interface sound volume": "Громкость звука интерфейса",
+  "In-game event volume": "Громкость игровых событий",
+  "Ambient volume": "Громкость окружения",
+  "Audio latency": "Задержка звука",
+
+  "_interface_settings": "Interface settings",
+  "Drag Mode": "Режим перетаскивания",
+  "Number of panels hotkey (need reboot):": "Горячая клавиша количества панелей (нужна перезагрузка):",
+  "Camera:": "Камера:",
+  "Invert horizontal camera rotation": "Инвертировать горизонтальное вращение камеры",
+  "Invert vertical camera rotation": "Инвертировать вертикальное вращение камеры",
+  "Interface scale (requires restart)": "Масштаб интерфейса (требует перезапуск)",
+  "Object fine-placement granularity": "Детализация точной установки объектов",
+  "Position": "Позиция",
+  "Angle": "Угол",
+  "UI Opacity:": "Прозрачность UI:",
+  "Use solid color background": "Использовать сплошной фон",
+  "Select Color": "Выбрать цвет",
+  "Select Background Color": "Выбрать цвет фона",
+  "Main menu": "Главное меню",
+
+  "_general_buttons": "General buttons",
+  "Visit store": "Посетить магазин",
+  "Switch character": "Сменить персонажа",
+  "Log out": "Выйти",
+  "Close": "Закрыть",
+  "Play": "Играть",
+
+  "_buddy_window": "Buddy/Friends window",
+  "Last seen:": "Последний раз виден:",
+  "Sort by:": "Сортировать по:",
+  "Status": "Статус",
+  "Group": "Группа",
+  "Name": "Имя",
+  "Presentation name:": "Отображаемое имя:",
+  "Set": "Установить",
+  "My hearth secret:": "Мой секрет очага:",
+  "Clear": "Очистить",
+  "Random": "Случайный",
+  "Make kin by hearth secret:": "Сделать родственником по секрету очага:",
+  "Add kin": "Добавить родственника",
+
+  "_character_window": "Character window",
+  "Base Attributes": "Базовые атрибуты",
+  "Abilities": "Способности",
+  "Quest Log": "Журнал заданий",
+  "Health & Wounds": "Здоровье и раны",
+  "Food Event Points": "Очки пищевых событий",
+  "Food Satiations": "Сытость от пищи",
+
+  "_misc_dialogs": "Miscellaneous dialogs",
+  "Trellis Placement": "Размещение шпалеры",
+  "Tree Spacing Configuration": "Настройка расстояния между деревьями",
+  "Remove": "Удалить",
+
+  "_bot_windows": "Bot windows",
+  "Start": "Запустить",
+  "Stop": "Остановить",
+  "Pause": "Пауза",
+  "Resume": "Продолжить",
+  "Add": "Добавить",
+  "Mark": "Отметить",
+  "Plan": "Планировать",
+
+  "_inventory_sorting": "Inventory sorting",
+  "Switch to compact view": "Переключить на компактный вид",
+  "Switch to expanded view": "Переключить на расширенный вид",
+  "Count": "Количество",
+  "Resource": "Ресурс",
+  "Quality": "Качество",
+  "Asc": "По возрастанию",
+  "Desc": "По убыванию",
+
+  "_tree_fish_windows": "Tree and Fish search windows",
+  "Tree Type:": "Тип дерева:",
+  "Results:": "Результаты:",
+  "Delete": "Удалить",
+  "Quantity:": "Количество:",
+
+  "_cookbook": "Cookbook",
+  "Ingredients": "Ингредиенты",
+  "FEP/Hunger": "FEP/Голод",
+  "Total FEP": "Общий FEP",
+  "Hunger": "Голод",
+  "Energy": "Энергия",
+
+  "_chat_ui": "Chat UI",
+  "Chat": "Чат",
+  "Mute": "Заглушить",
+  "Unmute": "Включить звук",
+  "Party": "Группа",
+
+  "_character_selection": "Character selection",
+  "Log out": "Выйти",
+  "Play": "Играть",
+
+  "_misc_messages": "Miscellaneous messages",
+  "Ready": "Готово",
+  "Last seen:": "Последний раз виден:",
+  "None": "Нет",
+  "Default client": "Клиент по умолчанию",
+
+  "_common_ui_elements": "Common UI elements",
+  "OK": "ОК",
+  "Save": "Сохранить",
+  "Cancel": "Отмена",
+  "Delete": "Удалить",
+  "Edit": "Редактировать",
+  "Add": "Добавить",
+  "Remove": "Удалить",
+  "Clear": "Очистить",
+  "Refresh": "Обновить",
+  "Update": "Обновить",
+  "Load": "Загрузить",
+  "Export": "Экспорт",
+  "Import": "Импорт"
 }
