Skills and abilities

--- a/src/resources/translations/dynamic/skills_en.json
+++ b/src/resources/translations/dynamic/skills_en.json
@@ -9,7 +9,7 @@
   "survival": "Survival",
   "exploration": "Exploration",
   "combat": "Combat",
-  "archery": "Archery",
+  "marksmanship": "Marksmanship",
   "pottery": "Pottery",
   "weaving": "Weaving"
 }
