--- a/src/resources/translations/dynamic/skills_ru.json
+++ b/src/resources/translations/dynamic/skills_ru.json
@@ -9,7 +9,7 @@
   "survival": "Выживание",
   "exploration": "Исследование",
   "combat": "Сражение",
-  "archery": "Стрельба из лука",
+  "marksmanship": "Стрельба из лука",
   "pottery": "Гончарное дело",
   "weaving": "Ткачество"
 }
