--- a/src/resources/translations/dynamic/static_ui_ru.json
+++ b/src/resources/translations/dynamic/static_ui_ru.json
@@ -269,5 +269,31 @@
   "_skill_tabs": "Skill window tabs",
   "Skills": "Навыки",
   "Credos": "Кредо",
+  "Lore": "Знания",
+
+  "_attribute_names": "Attribute names from server resources",
+  "Strength": "Сила",
+  "Agility": "Ловкость",
+  "Intelligence": "Интеллект",
+  "Constitution": "Телосложение",
+  "Perception": "Восприятие",
+  "Charisma": "Харизма",
+  "Dexterity": "Точность",
+  "Will": "Воля",
+  "Psyche": "Психика",
+
+  "_ability_names": "Ability names from server resources",
+  "Unarmed Combat": "Рукопашный бой",
+  "Melee Combat": "Ближний бой",
+  "Ranged Combat": "Дальний бой",
+  "Explore": "Исследование",
+  "Stealth": "Скрытность",
+  "Sewing": "Шитье",
+  "Smithing": "Кузнечное дело",
+  "Masonry": "Каменная кладка",
+  "Carpentry": "Плотничество",
+  "Cooking": "Кулинария",
+  "Farming": "Фермерство",
+  "Survive": "Выживание",
   "Lore": "Знания"
 }
