--- a/src/resources/translations/dynamic/static_ui_ru.json
+++ b/src/resources/translations/dynamic/static_ui_ru.json
@@ -252,6 +252,12 @@
   "Experience points:": "Очки опыта:",
   "Learning points:": "Очки изучения:",
   "Learning cost:": "Стоимость изучения:",
+  "Cost:": "Стоимость:",
+  "Attention:": "Внимание:",
+  "Experience cost:": "Стоимость опыта:",
+  "Study time:": "Время изучения:",
+  "Remaining time:": "Оставшееся время:",
+  "Mental weight:": "Ментальный вес:",
   "Buy": "Купить",
   "Reset": "Сброс",
 
@@ -270,6 +276,9 @@
   "Skills": "Навыки",
   "Credos": "Кредо",
   "Lore": "Знания",
+  "Available Skills": "Доступные навыки",
+  "Known Skills": "Изученные навыки",
+  "Used:": "Использовано:",
 
   "_attribute_names": "Attribute names from server resources",
   "Strength": "Сила",
