--- a/src/resources/translations/dynamic/static_ui_ru.json
+++ b/src/resources/translations/dynamic/static_ui_ru.json
@@ -357,5 +357,144 @@
   "Study": "Изучать",
   "Inspect": "Осмотреть",
   "Take": "Взять",
-  "Drop": "Бросить"
+  "Drop": "Бросить",
+
+  "_window_titles": "Window and dialog titles from Ender client",
+  "Map": "Карта",
+  "Equipment": "Снаряжение",
+  "Inventory": "Инвертарь",
+  "Character Sheet": "Лист персонажа",
+  "Crafting": "Ремесло",
+  "Study": "Изучение",
+  "Confirmation": "Подтверждение",
+  "Description": "Описание",
+  "Filter": "Поиск",
+  "Search...": "Поиск...",
+  "Changelog": "Изменения",
+  "Characters": "Персонажи",
+  "Restart": "Перезапуск",
+  "Update": "Обновление",
+  "Split": "Разделить",
+  "Travel": "Путешествовать",
+  "Act…": "Действие…",
+  "Build…": "Строить…",
+  "Craft…": "Создать…",
+  "Change Name": "Изменить имя",
+  "Choose pattern": "Выберите рисунок",
+  "Choose type": "Выберите тип",
+  "Create New Timer": "Создать новый таймер",
+  "Edit Timer": "Редактировать",
+  "Timers": "Таймеры",
+  "Toggle at login": "Включить на входе",
+  "Quest Helper": "Помощник заданий",
+  "Icon settings": "Настройка значков",
+  "Prospecting": "Поиск руды",
+  "System Message": "Системное сообщение",
+  "Invitation": "Приглашение",
+  "Key name": "Имя ключа",
+  "Rename School": "Переименовать школу",
+  "Name bond": "Переименовать узы",
+  "Visage": "Внешний вид",
+  "Hey, listen!": "Эй, послушай!",
+  "Hooray!": "Урааааа!",
+  "This is bait": "Закинуть крючок",
+  "Show as buffs": "Показать как бафф",
+
+  "_container_names": "Container and storage names from Ender client",
+  "Chest": "Сундук",
+  "Barrel": "Бочка",
+  "Basket": "Корзина",
+  "Crate": "Ящик",
+  "Cupboard": "Шкаф",
+  "Large Chest": "Большой сундук",
+  "Wooden Chest": "Деревянный сундук",
+  "Bone Chest": "Костяной сундук",
+  "Exquisite Chest": "Изысканный сундук",
+  "Stone Casket": "Каменный сундук",
+  "Strongbox": "Сейф",
+  "Coffer": "Кофр",
+  "Wardrobe": "Гардероб",
+  "Metal Cabinet": "Металлический шкаф",
+  "Wine Rack": "Винный шкаф",
+  "Winerack": "Винный шкаф",
+  "Cheese Rack": "Сырная стойка",
+  "C. Rack": "Сырная стойка",
+  "Woodbox": "Деревянная коробка",
+  "Stockpile": "Куча",
+  "Birch Basket": "Корзина из бересты",
+  "Birch-bark Basket": "Берестяная корзина",
+  "Straw Basket": "Соломенная корзина",
+  "Wicker Basket": "Плетёная корзина",
+  "Linen Crate": "Матерчатый ящик",
+  "Pack Rack": "Вьюк",
+  "Saddlebags": "Переметная сума",
+  "Quiver": "Колчан",
+  "Keyring": "Кольцо для ключей",
+  "Well": "Колодец",
+  "Tub": "Чан",
+  "Trough": "Кормушка",
+  "Food Trough": "Кормушка",
+
+  "_building_structures": "Buildings and structures from Ender client",
+  "Kiln": "Печь для обжига",
+  "Oven": "Кухонная печь",
+  "Anvil": "Наковальня",
+  "Loom": "Ткацкий станок",
+  "Cauldron": "Котел",
+  "Clay Cauldron": "Глиняный котёл",
+  "Metal Cauldron": "Металлический котел",
+  "Potter's Wheel": "Гончарный круг",
+  "Spinning Wheel": "Прялка",
+  "Churn": "Маслобойка",
+  "Tanning Tub": "Дубильный чан",
+  "Curding Tub": "Чан для творога",
+  "Ore Smelter": "Плавильная печь",
+  "Finery Forge": "Горн",
+  "Tar Kiln": "Смоляная печь",
+  "Crucible": "Тигель",
+  "Steel Crucible": "Тигель для стали",
+  "Steelbox": "Тигель",
+  "Extraction Press": "Пресс",
+  "Gemcutter's Wheel": "Станок гранильщика",
+  "Ropewalk": "Веревочный станок",
+  "Meatgrinder": "Мясокрутка",
+  "Windmill": "Мельница",
+  "Granary": "Зернохранилище",
+  "Cistern": "Цистерна",
+  "Compost Bin": "Ящик для компоста",
+
+  "_furniture_items": "Furniture and decorative items from Ender client",
+  "Table": "Стол",
+  "Stone Table": "Каменный стол",
+  "Rustic Table": "Грубый стул",
+  "Cottage Table": "Красивый стол",
+  "Arched chair": "Арочный стул",
+  "Cloth Chair": "Матерчатый стул",
+  "Rustic Chair": "Грубый стул",
+  "Rocking Chair": "Кресло-качалка",
+  "Cloth Armchair": "Обитое тканью кресло",
+  "Long Bench": "Длинная скамья",
+  "Garden Bench": "Садовая скамейка",
+  "Cushioned Bench": "Банкетка",
+  "Fine Sofa": "Роскошный диван",
+  "Royal Stool": "Королевская табуретка",
+  "Royal Throne": "Королевский Трон",
+  "Cottage Throne": "Трон",
+  "Stone Throne": "Каменный трон",
+  "Sturdy Bed": "Кровать",
+  "Fireplace": "Очаг",
+  "Candelabrum": "Канделябр",
+  "Lantern Stand": "Подставка для фонаря",
+  "Torchpost": "Подставка для факела",
+
+  "_vehicles_tools": "Vehicles and tools from Ender client",
+  "Cart": "Телега",
+  "Wagon": "Повозка",
+  "Wheelbarrow": "Тачка",
+  "Rowboat": "Лодка",
+  "Coracle": "Рыбачья лодка",
+  "Raft": "Паром",
+  "Knarr": "Кнорр",
+  "Metal Plow": "Металлический плуг",
+  "Wooden Plow": "Деревянный плуг"
 }
