Login screen translation

--- a/src/resources/translations/dynamic/static_ui_en.json
+++ b/src/resources/translations/dynamic/static_ui_en.json
@@ -44,5 +44,9 @@
   "Auto Drop settings": "Auto Drop settings",
   "Eating bot": "Eating bot",
   "Farming Settings": "Farming Settings",
-  "Cheese orders": "Cheese orders"
+  "Cheese orders": "Cheese orders",
+
+  "_login_interface": "Login screen interface",
+  "Login saved": "Login saved",
+  "Forget me": "Forget me"
 }
