--- a/src/resources/translations/dynamic/static_ui_en.json
+++ b/src/resources/translations/dynamic/static_ui_en.json
@@ -48,5 +48,9 @@
 
   "_login_interface": "Login screen interface",
   "Login saved": "Login saved",
-  "Forget me": "Forget me"
+  "Forget me": "Forget me",
+
+  "_settings_window": "Settings window interface",
+  "Fonts": "Fonts",
+  "Autorunner scenarios": "Autorunner scenarios"
 }
