--- a/src/resources/translations/dynamic/static_ui_ru.json
+++ b/src/resources/translations/dynamic/static_ui_ru.json
@@ -500,5 +500,9 @@
 
   "_login_interface": "Login screen interface",
   "Login saved": "Логин сохранён",
-  "Forget me": "Забыть меня"
+  "Forget me": "Забыть меня",
+
+  "_settings_window": "Settings window interface",
+  "Fonts": "Шрифты",
+  "Autorunner scenarios": "Сценарии автозапуска"
 }
