--- a/src/resources/translations/dynamic/static_ui_en.json
+++ b/src/resources/translations/dynamic/static_ui_en.json
@@ -52,5 +52,139 @@
 
   "_settings_window": "Settings window interface",
   "Fonts": "Fonts",
-  "Autorunner scenarios": "Autorunner scenarios"
+  "Autorunner scenarios": "Autorunner scenarios",
+
+  "_cheese_orders_table": "Cheese orders table headers",
+  "Status": "Status",
+  "Cheese Type": "Cheese Type",
+  "Location": "Location",
+  "Progress": "Progress",
+  "Add Order": "Add Order",
+  "Add Cheese Order:": "Add Cheese Order:",
+  "Cheese Orders:": "Cheese Orders:",
+
+  "_qol_settings": "Quality of Life settings",
+  "● Visual & Interface": "● Visual & Interface",
+  "● Login Settings": "● Login Settings",
+  "● Map Overlays": "● Map Overlays",
+  "● Pathfinding & Navigation": "● Pathfinding & Navigation",
+  "● Quality of Life": "● Quality of Life",
+  "● Debug & Development": "● Debug & Development",
+  "● Temporary Marks": "● Temporary Marks",
+  "Show crop stage": "Show crop stage",
+  "Simple crops": "Simple crops",
+  "Night vision": "Night vision",
+  "Bounding Boxes": "Bounding Boxes",
+  "Show decorative objects (need reboot)": "Show decorative objects (need reboot)",
+  "Hide nature objects": "Hide nature objects",
+  "Uniform biome colors on minimap": "Uniform biome colors on minimap",
+  "Show terrain name on minimap hover": "Show terrain name on minimap hover",
+  "Short cupboards": "Short cupboards",
+  "Short mine walls": "Short mine walls",
+  "Enable tracking when login": "Enable tracking when login",
+  "Enable criminal acting when login": "Enable criminal acting when login",
+  "Enable swimming when login": "Enable swimming when login",
+  "Preferred movement speed on login:": "Preferred movement speed on login:",
+  "Show mining overlay": "Show mining overlay",
+  "Show personal claims on minimap": "Show personal claims on minimap",
+  "Show village claims on minimap": "Show village claims on minimap",
+  "Show realm overlays on minimap": "Show realm overlays on minimap",
+  "Use global PF": "Use global PF",
+  "Retry waypoint movement when stuck": "Retry waypoint movement when stuck",
+  "Show full path lines to destinations": "Show full path lines to destinations",
+  "Auto-drink": "Auto-drink",
+  "Enable quest notified": "Enable quest notified",
+  "Enable LP assistant": "Enable LP assistant",
+  "Disable menugrid keys": "Disable menugrid keys",
+  "Verbose calendar": "Verbose calendar",
+  "DEBUG": "DEBUG",
+  "Path Finder map in debug": "Path Finder map in debug",
+  "Save temporary marks": "Save temporary marks",
+  "Max distance (grids):": "Max distance (grids):",
+  "Storage duration (minutes):": "Storage duration (minutes):",
+
+  "_movement_speeds": "Movement speed options",
+  "Crawl": "Crawl",
+  "Walk": "Walk",
+  "Run": "Run",
+  "Sprint": "Sprint",
+
+  "_font_settings": "Font configuration options",
+  "Text type:": "Text type:",
+  "Font family:": "Font family:",
+  "Color": "Color",
+  "Font size:": "Font size:",
+  "Sample text: 123 ABC abc": "Sample text: 123 ABC abc",
+
+  "_database_settings": "Database configuration",
+  "Enable using Database": "Enable using Database",
+  "Database Settings:": "Database Settings:",
+  "Database Type:": "Database Type:",
+  "File Path:": "File Path:",
+  "Initialize New Database": "Initialize New Database",
+  "Database successfully created and initialized": "Database successfully created and initialized",
+  "Failed to create database: ": "Failed to create database: ",
+
+  "_auto_mapper": "Auto-Mapper settings",
+  "ONLINE Auto-Mapper settings:": "ONLINE Auto-Mapper settings:",
+  "Enable Auto Mapper": "Enable Auto Mapper",
+  "Server URL:": "Server URL:",
+  "Set": "Set",
+  "Enable navigation tracking": "Enable navigation tracking",
+  "Upload custom green marks": "Upload custom green marks",
+
+  "_auto_selection": "Auto-Selection settings",
+  "Auto selection enabled": "Auto selection enabled",
+  "Auto selected petals:": "Auto selected petals:",
+  "Auto select single petal": "Auto select single petal",
+
+  "_quick_actions": "Quick Actions settings",
+  "Disable opening/closing visitor gates": "Disable opening/closing visitor gates",
+  "Walking into doors in basic mode": "Walking into doors in basic mode",
+
+  "_world_settings": "World Settings",
+  "World Settings": "World Settings",
+  "Terrain:": "Terrain:",
+  "Flat surface (requires restart)": "Flat surface (requires restart)",
+  "Show decorative objects (requires restart)": "Show decorative objects (requires restart)",
+  "Objects:": "Objects:",
+  "Hide nature objects": "Hide nature objects",
+  "Show object boundaries": "Show object boundaries",
+  "Keep barrel labels visible during camera scroll": "Keep barrel labels visible during camera scroll",
+  "Bounding Box Colors:": "Bounding Box Colors:",
+  "Fill:": "Fill",
+  "Edge:": "Edge",
+  "Line width: 4": "Line width: 4",
+  "Line width: ": "Line width: ",
+
+  "_animal_rings": "Animal Rings settings",
+  "Animal rings settings:": "Animal rings settings:",
+
+  "_scenarios": "Scenarios management",
+  "Scenarios:": "Scenarios:",
+  "Add Scenario": "Add Scenario",
+  "Edit Scenario:": "Edit Scenario:",
+  "Add Step": "Add Step",
+  "New Scenario": "New Scenario",
+
+  "_feed_clover": "Feed Clover settings",
+  "Feed Clover options:": "Feed Clover options:",
+  "Tie the animal on a rope after feeding it": "Tie the animal on a rope after feeding it",
+
+  "_drop_settings": "Drop settings",
+  "Drop settings": "Drop settings",
+
+  "_eating_bot": "Eating Bot settings",
+  "Eating Bot": "Eating Bot",
+
+  "_farming_settings": "Farming settings",
+  "Refill water from water containers for farmers": "Refill water from water containers for farmers",
+  "Keep quality grind containers at most half full": "Keep quality grind containers at most half full",
+  "Excess lowest quality seeds will be moved to the trough if defined": "Excess lowest quality seeds will be moved to the trough if defined",
+  "Fill compost bins with swill": "Fill compost bins with swill",
+  "Do NOT pick up straw in farmers.": "Do NOT pick up straw in farmers.",
+  "Auto equip traveller's sacks after harvesting": "Auto equip traveller's sacks after harvesting",
+  "Validate all crops are ready before harvesting": "Validate all crops are ready before harvesting",
+  "Seeding Pattern X (columns):": "Seeding Pattern X (columns):",
+  "Seeding Pattern Y (rows):": "Seeding Pattern Y (rows):"
 }
