--- a/src/resources/translations/dynamic/static_ui_ru.json
+++ b/src/resources/translations/dynamic/static_ui_ru.json
@@ -504,5 +504,138 @@
 
   "_settings_window": "Settings window interface",
   "Fonts": "Шрифты",
-  "Autorunner scenarios": "Сценарии автозапуска"
+  "Autorunner scenarios": "Сценарии автозапуска",
+
+  "_cheese_orders_table": "Заголовки таблицы заказов сыра",
+  "Cheese Type": "Тип сыра",
+  "Location": "Местоположение",
+  "Progress": "Прогресс",
+  "Add Order": "Добавить заказ",
+  "Add Cheese Order:": "Добавить заказ сыра:",
+  "Cheese Orders:": "Заказы сыра:",
+
+  "_qol_settings": "Настройки качества жизни",
+  "● Visual & Interface": "● Визуал и интерфейс",
+  "● Login Settings": "● Настройки входа",
+  "● Map Overlays": "● Наложения карты",
+  "● Pathfinding & Navigation": "● Поиск пути и навигация",
+  "● Quality of Life": "● Качество жизни",
+  "● Debug & Development": "● Отладка и разработка",
+  "● Temporary Marks": "● Временные отметки",
+  "Show crop stage": "Показать стадию роста урожая",
+  "Simple crops": "Простые урожаи",
+  "Night vision": "Ночное зрение",
+  "Bounding Boxes": "Границы объектов",
+  "Show decorative objects (need reboot)": "Показать декоративные объекты (требует перезапуск)",
+  "Hide nature objects": "Скрыть природные объекты",
+  "Uniform biome colors on minimap": "Однородные цвета биомов на мини-карте",
+  "Show terrain name on minimap hover": "Показать название местности при наведении на мини-карту",
+  "Short cupboards": "Короткие шкафы",
+  "Short mine walls": "Короткие стены шахт",
+  "Enable tracking when login": "Включить отслеживание при входе",
+  "Enable criminal acting when login": "Включить преступные действия при входе",
+  "Enable swimming when login": "Включить плавание при входе",
+  "Preferred movement speed on login:": "Предпочтительная скорость движения при входе:",
+  "Show mining overlay": "Показать наложение добычи",
+  "Show personal claims on minimap": "Показать личные владения на мини-карте",
+  "Show village claims on minimap": "Показать владения деревни на мини-карте",
+  "Show realm overlays on minimap": "Показать наложения королевства на мини-карте",
+  "Use global PF": "Использовать глобальный поиск пути",
+  "Retry waypoint movement when stuck": "Повторить движение к точке при застревании",
+  "Show full path lines to destinations": "Показать полные линии путей к целям",
+  "Auto-drink": "Авто-питье",
+  "Enable quest notified": "Включить уведомления о заданиях",
+  "Enable LP assistant": "Включить помощника LP",
+  "Disable menugrid keys": "Отключить клавиши меню сетки",
+  "Verbose calendar": "Подробный календарь",
+  "DEBUG": "ОТЛАДКА",
+  "Path Finder map in debug": "Карта поиска пути в отладке",
+  "Save temporary marks": "Сохранять временные отметки",
+  "Max distance (grids):": "Максимальное расстояние (сетки):",
+  "Storage duration (minutes):": "Время хранения (минуты):",
+
+  "_movement_speeds": "Варианты скорости движения",
+  "Crawl": "Ползти",
+  "Walk": "Идти",
+  "Run": "Бежать",
+  "Sprint": "Спринт",
+
+  "_font_settings": "Настройки шрифтов",
+  "Text type:": "Тип текста:",
+  "Font family:": "Семейство шрифтов:",
+  "Color": "Цвет",
+  "Font size:": "Размер шрифта:",
+  "Sample text: 123 ABC abc": "Образец текста: 123 АБВ абв",
+
+  "_database_settings": "Настройки базы данных",
+  "Enable using Database": "Включить использование базы данных",
+  "Database Settings:": "Настройки базы данных:",
+  "Database Type:": "Тип базы данных:",
+  "File Path:": "Путь к файлу:",
+  "Initialize New Database": "Инициализировать новую базу данных",
+  "Database successfully created and initialized": "База данных успешно создана и инициализирована",
+  "Failed to create database: ": "Не удалось создать базу данных: ",
+
+  "_auto_mapper": "Настройки автокартографа",
+  "ONLINE Auto-Mapper settings:": "Настройки ОНЛАЙН автокартографа:",
+  "Enable Auto Mapper": "Включить автокартограф",
+  "Server URL:": "URL сервера:",
+  "Set": "Установить",
+  "Enable navigation tracking": "Включить отслеживание навигации",
+  "Upload custom green marks": "Загрузить пользовательские зеленые отметки",
+
+  "_auto_selection": "Настройки автовыбора",
+  "Auto selection enabled": "Автовыбор включен",
+  "Auto selected petals:": "Автовыбранные лепестки:",
+  "Auto select single petal": "Автовыбор одного лепестка",
+
+  "_quick_actions": "Настройки быстрых действий",
+  "Disable opening/closing visitor gates": "Отключить открытие/закрытие ворот для посетителей",
+  "Walking into doors in basic mode": "Проход через двери в базовом режиме",
+
+  "_world_settings": "Настройки мира",
+  "World Settings": "Настройки мира",
+  "Terrain:": "Местность:",
+  "Flat surface (requires restart)": "Плоская поверхность (требует перезапуск)",
+  "Show decorative objects (requires restart)": "Показать декоративные объекты (требует перезапуск)",
+  "Objects:": "Объекты:",
+  "Hide nature objects": "Скрыть природные объекты",
+  "Show object boundaries": "Показать границы объектов",
+  "Keep barrel labels visible during camera scroll": "Сохранять видимость подписей бочек при прокрутке камеры",
+  "Bounding Box Colors:": "Цвета ограничивающих рамок:",
+  "Fill:": "Заливка",
+  "Edge:": "Граница",
+  "Line width: 4": "Ширина линии: 4",
+  "Line width: ": "Ширина линии: ",
+
+  "_animal_rings": "Настройки колец животных",
+  "Animal rings settings:": "Настройки колец животных:",
+
+  "_scenarios": "Управление сценариями",
+  "Scenarios:": "Сценарии:",
+  "Add Scenario": "Добавить сценарий",
+  "Edit Scenario:": "Редактировать сценарий:",
+  "Add Step": "Добавить шаг",
+  "New Scenario": "Новый сценарий",
+
+  "_feed_clover": "Настройки кормления клевера",
+  "Feed Clover options:": "Настройки кормления клевера:",
+  "Tie the animal on a rope after feeding it": "Привязать животное веревкой после кормления",
+
+  "_drop_settings": "Настройки сброса",
+  "Drop settings": "Настройки сброса",
+
+  "_eating_bot": "Настройки бота питания",
+  "Eating Bot": "Бот питания",
+
+  "_farming_settings": "Настройки фермерства",
+  "Refill water from water containers for farmers": "Пополнять воду из водных контейнеров для фермеров",
+  "Keep quality grind containers at most half full": "Держать качественные контейнеры для помола максимум наполовину полными",
+  "Excess lowest quality seeds will be moved to the trough if defined": "Лишние семена самого низкого качества будут перемещены в кормушку, если она определена",
+  "Fill compost bins with swill": "Заполнить компостные ящики помоями",
+  "Do NOT pick up straw in farmers.": "НЕ подбирать солому в фермерах.",
+  "Auto equip traveller's sacks after harvesting": "Автоматически надевать дорожные мешки после сбора урожая",
+  "Validate all crops are ready before harvesting": "Проверять, что все культуры готовы перед сбором урожая",
+  "Seeding Pattern X (columns):": "Схема посева X (столбцы):",
+  "Seeding Pattern Y (rows):": "Схема посева Y (ряды):"
 }
